Working on animation for correct and incorrect answers.

--- a/app/src/main/res/layout/activity_review_term.xml
+++ b/app/src/main/res/layout/activity_review_term.xml
@@ -137,7 +137,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/user_level_progressbar" />
 
             <Button
-                android:id="@+id/continue_button"
+                android:id="@+id/submit_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
