--- a/app/src/main/res/layout/activity_revision_summary.xml
+++ b/app/src/main/res/layout/activity_revision_summary.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/summary_textbox"
+                android:id="@+id/term_textbox"
                 android:layout_width="209dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
@@ -48,7 +48,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/summary_textbox" />
+                app:layout_constraintTop_toBottomOf="@+id/term_textbox" />
 
             <TextView
                 android:id="@+id/number_wrong_hardcoded_text"
