--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:duration="500"
-        android:fromXDelta="0"
-        android:interpolator="@anim/shake_cycle"
-        android:toXDelta="20" />
+        android:fromXDelta="-10"
+        android:toXDelta="10"
+        android:repeatCount="5"
+        android:repeatMode="reverse"
+        android:interpolator="@android:anim/linear_interpolator"
+        android:duration="70" />
 </set>
