--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -164,6 +164,7 @@
                 app:srcCompat="@android:drawable/sym_def_app_icon" />
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_profile_imageview"
                 android:layout_width="112dp"
                 android:layout_height="122dp"
                 android:src="@drawable/ic_launcher_background"
