--- a/app/src/main/res/layout/activity_review_term.xml
+++ b/app/src/main/res/layout/activity_review_term.xml
@@ -16,6 +16,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/background_flag_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/term_textbox"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <EditText
                 android:id="@+id/answerbox"
                 android:layout_width="0dp"
@@ -23,6 +32,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
+                android:autofillHints=""
                 android:background="@drawable/rounded_corners_textbox_bg"
                 android:fontFamily="@font/cabin"
                 android:gravity="center_horizontal"
@@ -32,8 +42,7 @@
                 android:translationZ="90dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/translation_text"
-                android:autofillHints="" />
+                app:layout_constraintTop_toBottomOf="@+id/translation_text" />
 
             <TextView
                 android:id="@+id/term_textbox"
