--- a/app/src/main/res/layout/activity_revision_summary.xml
+++ b/app/src/main/res/layout/activity_revision_summary.xml
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     android:background="@color/bg_teal">
 
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/summary_composeview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
