--- a/app/src/main/res/layout/activity_vocab_search.xml
+++ b/app/src/main/res/layout/activity_vocab_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VocabSearchActivity">
+    tools:context=".activities.VocabSearchActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vocab_search_recycler_view"
